[package]
name = "arbitrary-json"
version = "0.1.0"
edition = "2021"
description = "A Json generator based on serde_json and arbitrary"
readme = "README.md"
author = ["Tamo tamo@meilisearch.com"]
license = "WTFPL"
repository = "https://github.com/irevoire/arbitrary-json"
keywords = ["json", "arbitrary", "fuzzer"]
categories = ["development-tools"]

[dependencies]
serde_json = "1.0"
arbitrary = "1"

[dev-dependencies]
rand = "0.8"